<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DVA</string>
    <string name="connect">Connect a Shimmer</string>
    <string name="disconnect">Disconnect Shimmer</string>
    <string name="startstream">Start streaming</string>
    <string name="stopstream">Stop streaming</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_connecting">connecting...</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a Shimmer to connect</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="settings">Settings</string>
    <string name="sensorvalue1">Shimmer 1</string>
    <string name="sensorvalue2">Shimmer 1</string>
    <string name="sensorvalue3">Shimmer 1</string>
    <string name="sensorvalue4">Intrnl</string>
    <string name="sensorvalue5">Intrnl</string>
    <string name="sensorvalue6">Intrnl</string>
    <string name="label_sensor1">Sensor1</string>
    <string name="label_sensor2">Sensor2</string>
    <string name="label_sensor3">Sensor3</string>
    <string name="label_sensor4">Accel_X</string>
    <string name="label_sensor5">Accel_Y</string>
    <string name="label_sensor6">Accel_Z</string>
    <string name="configure_device">Configure Shimmer</string>
    <string name="one_point_five_g">Set Accel range to \u00B11.5G</string>
    <string name="six_g">Set Accel range to \u00B16G</string>
    <string name="button_1">Connect</string>
    <string name="viewsensor">Edit Graph</string>
    <string name="enable_sensors_done">Done</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="dvastart">dvastart</string>
    <string name="title_activity_dvatest">DVATestActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="activateshimmer">ActivateShimmer</string>
    <string name="activateintrnlaccel">Verify Internal Accel</string>
    <string name="dvateststart">Start DVA Test</string>
    <string name="dynamic_up">Dynamic Up</string>
    <string name="dynamic_down">Dynamic Down</string>
    <string name="dynamic_right">Dynamic Right</string>
    <string name="dynamic_left">Dynamic Left</string>
    <string name="compute_dva">Compute DVA</string>
    <string name="dva_static">Static</string>
    <string name="quit">Quit</string>
    <string name="title_activity_test_relative2">TestRelative2</string>
    <string name="start_new_test">Start New Test</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="return_to_main">Return To Main</string>
    <string name="landoltc">landoltc</string>
    <string name="filename">filename</string>
   <!-- Preference Setting Values -->
   <string name="dvachange">Change </string>
   <string name="dvadefault">Default</string>
   <string name="dvatestsetting">DVA Setting</string>
   <string name="dva_test_path_setting">Path to data is built from these components</string>
   <string name="dva_test_path_pj_setting">Project Name</string>
   <string name="dva_test_path_sub_setting">Subject Name</string>
   <string name="dva_test_path_fd_setting">Folder Name</string>
   
   <string name="dva_test_path_pj_setting_summary">DVA Setting</string>
   <string name="dva_test_path_sub_setting_summary">Joshua</string>
   <string name="dva_test_path_fd_setting_summary">Joshua</string>
   
   <string name="dva_test_basic_setting">Test Session Parameters</string>
   <string name="dva_test_pre_setting">Default Setting</string>
    <string name="dva_test_retrys_num_title">Retrys Limit</string>
    <string name="dva_test_retrys_num_summary">DVA test Retrys number</string>
    <string name="dva_static_start_lvl_title">Static Start Level</string>
    <string name="dva_static_start_lvl_summary">DVA Static Start Level</string>
    <string name="dva_dyna_start_lvl_title">Dynamic Start Level</string>
    <string name="dva_dyna_start_lvl_summary">DVA Dynamic Start Level</string>
    <string name="dva_max_acuity_lvl_title">Max Acuity Level</string>
    <string name="dva_max_acuity_lvl_summary">DVA Test Maximum Acuity Level</string>
    <string name="dva_test_per_acuity_title">Test Per Acuity</string>
    <string name="dva_test_per_acuity_summary">DVA Test Per Acuity</string>
    <string name="dva_trg_inhibitor_num_title">Trigger Inhibitor</string>
    <string name="dva_trg_inhibitor_num_summary">DVA Trigger Inhibitor Number</string>
    
     <string name="dva_test_retrys_num_default">5</string>
     <string name="dva_static_start_lvl_default">2</string>
     <string name="dva_dyna_start_lvl_default">3</string>
     <string name="dva_test_per_acuity_default">10</string>
     <string name="dva_trg_inhibitor_num_default">5</string>
     <string name="dva_max_acuity_lvl_default">50</string>
     
     <string name="dva_near_default_setting">Default Setting for Short/Long Distance Test</string>
     <string name="dva_near_default_setting_summary">Switch on is Long Distance Default and off is Short Distance Default</string>
     
     <string name="dva_final_score_time">Test Timestamp</string>
     <string name="dva_final_score_direction">Test Direction</string>
     <string name="dva_final_score_dyna_score">Dynamic LogMAR</string>
     <string name="dva_final_score_static_score">Static LogMAR</string>
     <string name="dva_final_score_final_score">DVA Score</string>
</resources>