<!-- <menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu> -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/scan"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/connect">
    </item>
    <item
        android:id="@+id/activateintrnlaccel"
        android:title="@string/activateintrnlaccel">
    </item>
    <item
        android:id="@+id/dvateststart"
        android:title="@string/dvateststart">
    </item>
    <item
        android:id="@+id/dvatestsetting"
        android:title="@string/dvatestsetting">
    </item>
</menu>
