<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="25dp"
    android:stretchColumns="*">
    <TableRow
        android:layout_margin="5dp">
        <TextView
            android:text="@string/dva_final_score_time"
            android:gravity="center"
            />
        <TextView
            android:text="@string/dva_final_score_direction"
            android:gravity="center"
            />
        
        <TextView
            android:text="@string/dva_final_score_dyna_score"
            android:gravity="center"
             />
        
        <TextView
            android:text="@string/dva_final_score_static_score"
            android:gravity="center"
            />
        
        <TextView
            android:text="@string/dva_final_score_final_score"
            android:gravity="center"
             />
    </TableRow>
	<View   
	    android:id="@+id/firstDivider"
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#000000" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
	
	<TableRow
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/up_time"
            android:gravity="center"
            />
        <TextView
            android:text="@string/dynamic_up"
            android:gravity="center"
            />
        
        <TextView
            android:id="@+id/up_dyna_score"
            android:gravity="center"
             />
        
        <TextView
            android:id="@+id/up_static_score"
            android:gravity="center"
            />
        
        <TextView
            android:id="@+id/up_final_score"
            android:gravity="center"
             />
    </TableRow>
    
    <View   
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#AAAAAA" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    
	<TableRow
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/down_score_time"
            android:gravity="center"
            />
        <TextView
            android:text="@string/dynamic_down"
            android:gravity="center"
            />
        
        <TextView
            android:id="@+id/down_dyna_score"
            android:gravity="center"
             />
        
        <TextView
            android:id="@+id/down_static_score"
            android:gravity="center"
            />
        
        <TextView
            android:id="@+id/down_final_score"
            android:gravity="center"
             />
    </TableRow>
    
	<View   
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#AAAAAA"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />
	
	<TableRow
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/left_score_time"
            android:gravity="center"
            />
        <TextView
            android:text="@string/dynamic_left"
            android:gravity="center"
            />
        
        <TextView
            android:id="@+id/left_dyna_score"
            android:gravity="center"
             />
        
        <TextView
            android:id="@+id/left_static_score"
            android:gravity="center"
            />
        
        <TextView
            android:id="@+id/left_final_score"
            android:gravity="center"
             />
    </TableRow>
    
	<View   
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#AAAAAA" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
	
	<TableRow
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/right_time"
            android:gravity="center"
            />
        <TextView
            android:text="@string/dynamic_right"
            android:gravity="center"
            />
        
        <TextView
            android:id="@+id/right_dyna_score"
            android:gravity="center"
             />
        
        <TextView
            android:id="@+id/right_static_score"
            android:gravity="center"
            />
        
        <TextView
            android:id="@+id/right_final_score"
            android:gravity="center"
             />
    </TableRow>

</TableLayout>
