<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dva_l2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/editText21"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dvb20Static"
        android:layout_alignBottom="@+id/dvb20Static"
        android:layout_marginLeft="29dp"
        android:layout_toRightOf="@+id/dvb20Static"
        android:ems="10"
        android:hint="@string/filename"
        android:inputType="none|text"
        android:onClick="dvb1Static" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/dvb28StartNewTest"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText21"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:onClick="dvb28StartNewTest"
        android:text="@string/start_new_test" />

    <Button
        android:id="@+id/dvb24Up"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/dvb22Dn"
        android:layout_alignRight="@+id/dvb23Rght"
        android:onClick="dvb24Up"
        android:text="@string/up" />

    <Button
        android:id="@+id/dvb31Quit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dvb23Rght"
        android:layout_alignTop="@+id/dvb30Return"
        android:onClick="dvb7Quit"
        android:text="@string/quit" />

    <Button
        android:id="@+id/dvb23Rght"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/dvb29Left"
        android:layout_alignBottom="@+id/dvb29Left"
        android:layout_alignLeft="@+id/dvb28StartNewTest"
        android:onClick="dvb23Rght"
        android:text="@string/right" />

    <Button
        android:id="@+id/dvb30Return"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/editText21"
        android:onClick="dvb30Return"
        android:text="@string/return_to_main" />

    <Button
        android:id="@+id/dvb20Static"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dvb30Return"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="25dp"
        android:onClick="dvb20Static"
        android:text="@string/dva_static" />

    <TextView
        android:id="@+id/dvDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dvb20Static"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/editText21"
        android:text="active device"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dvb20Static"
        android:layout_toLeftOf="@+id/editText21" >

        <RadioButton
            android:id="@+id/dvrb60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:text="60\u00B0/s" />

        <RadioButton
            android:id="@+id/dvrb120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="120\u00B0/s" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dvDevice"
        android:layout_alignBottom="@+id/dvDevice"
        android:layout_alignLeft="@+id/editText21"
        android:text="trigger retrys:"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/dvaRetrys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="44dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/dvb22Dn"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_below="@+id/dvb29Left"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/editText21"
        android:onClick="dvb22Dn"
        android:text="@string/down" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:contentDescription="@string/landoltc"
        android:padding="1dp"
        android:src="@drawable/c_dn_3"
        android:visibility="invisible" />

    <Button
        android:id="@+id/dvb29Left"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/dvb22Dn"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="66dp"
        android:onClick="dvb29Left"
        android:text="@string/left" />

</RelativeLayout>